--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,19 @@
-beautifulsoup4==4.12.2
-click==8.1.7
-fastjsonschema==2.17.1
-Flask==2.3.2
-gunicorn==21.2.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-jsonpickle==3.0.2
-jsonpointer==2.4
-jsonschema==4.17.3
-MarkupSafe==2.1.3
-pickleshare==0.7.5
-pipenv==2023.10.24
-python-dateutil==2.8.2
-python-json-logger==2.0.7
-soupsieve==2.4.1
-virtualenv==20.24.6
-websocket-client==1.6.1
-Werkzeug==2.3.7
+beautifulsoup4
+click
+fastjsonschema
+Flask
+gunicorn
+itsdangerous
+Jinja2
+jsonpickle
+jsonpointer
+jsonschema
+MarkupSafe
+pickleshare
+pipenv
+python-dateutil
+python-json-logger
+soupsieve
+virtualenv
+websocket-client
+Werkzeug
