--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@ flix_bus_transfer_details.json
 sample_our_response.json
 Pipfile
 Pipfile.lock
-/backend/__pycache__
+**__pycahce__
+**/backend/__pycahce__
+**.plist
