made a parameter for the getting trips function on the backend. only need one route for all 4 bus options instead of 4 seperate routes

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ flix_bus_transfer_details.json
 sample_our_response.json
 Pipfile
 Pipfile.lock
-**__pycahce__
-**/backend/__pycahce__
+**__pycache__
+**/backend/__pycache__
 **.plist
