--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Pipfile.lock
 **.plist
 OfflineTrips.json
 **/frontend/.DS_Store
+frontend/ios/GetMeHome.xcodeproj/project.xcworkspace/xcuserdata/ronaldjabouin.xcuserdatad/UserInterfaceState.xcuserstate
