--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Pipfile.lock
 OfflineTrips.json
 **/frontend/.DS_Store
 frontend/ios/GetMeHome.xcodeproj/project.xcworkspace/xcuserdata/ronaldjabouin.xcuserdatad/UserInterfaceState.xcuserstate
+*/xcshareddata
