started working on trailways

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ OfflineTrips.json
 **/frontend/.DS_Store
 */frontend/ios/GetMeHome.xcodeproj/project.xcworkspace/xcuserdata/ronaldjabouin.xcuserdatad/UserInterfaceState.xcuserstate
 /frontend/ios/GetMeHome.xcodeproj/project.xcworkspace/xcuserdata/ronaldjabouin.xcuserdatad/UserInterfaceState.xcuserstate
+backend/
+/backend
