preliminary version of trailways data

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,4 @@ OfflineTrips.json
 */frontend/ios/GetMeHome.xcodeproj/project.xcworkspace/xcuserdata/ronaldjabouin.xcuserdatad/UserInterfaceState.xcuserstate
 /frontend/ios/GetMeHome.xcodeproj/project.xcworkspace/xcuserdata/ronaldjabouin.xcuserdatad/UserInterfaceState.xcuserstate
 backend/
-/backend
+backend
