--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,21 +1,26 @@
-beautifulsoup4
-click
-fastjsonschema
-Flask
-gunicorn
-itsdangerous
-Jinja2
-jsonpickle
-jsonpointer
-jsonschema
-lxml
-MarkupSafe
-pickleshare
-pipenv
-python-dateutil
-python-json-logger
-soupsieve
-virtualenv
-websocket-client
-requests
-Werkzeug
+aiohttp==3.9.3
+aiosignal==1.3.1
+asgiref==3.8.0
+attrs==23.2.0
+beautifulsoup4==4.12.2
+blinker==1.7.0
+bs4==0.0.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+Flask==3.0.0
+frozenlist==1.4.1
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jsonpickle==3.0.2
+lxml==5.2.0
+MarkupSafe==2.1.3
+multidict==6.0.5
+requests==2.31.0
+soupsieve==2.5
+stripe==8.7.0
+typing_extensions==4.10.0
+urllib3==2.1.0
+Werkzeug==3.0.1
+yarl==1.9.4
