--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,26 @@
+aiohttp==3.8.2
+aiosignal==1.3.1
+asgiref==3.7.0
+attrs==23.2.0
 beautifulsoup4==4.12.2
-blinker==1.7.0
+blinker==1.6.3
+bs4==0.0.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
-Flask==3.0.0
+Flask==2.2.5
+frozenlist==1.3.3
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonpickle==3.0.2
+lxml==5.2.0
 MarkupSafe==2.1.3
+multidict==6.0.5
 requests==2.31.0
-soupsieve==2.5
+soupsieve==2.4.1
 stripe==8.7.0
-typing_extensions==4.10.0
-urllib3==2.1.0
-Werkzeug==3.0.1
+typing_extensions==4.7.0
+urllib3==2.0.7
+Werkzeug==2.2.3
+yarl==1.9.4
