--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
 Flask==2.2.5
+gunicorn==19.7.1
 frozenlist==1.3.3
 idna==3.4
 itsdangerous==2.1.2
