--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,22 @@
-aiohttp==3.8.2
+aiofiles==23.2.1
+aiohttp==3.9.3
 aiosignal==1.3.1
-asgiref==3.7.0
+asgiref==3.8.0
 attrs==23.2.0
 beautifulsoup4==4.12.2
-blinker==1.6.3
+blinker==1.7.0
 bs4==0.0.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
-Flask==2.2.5
-gunicorn==19.7.1
-frozenlist==1.3.3
+Flask==3.0.0
+Flask-Cors==4.0.1
+frozenlist==1.4.1
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+Hypercorn==0.16.0
+hyperframe==6.0.1
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -18,10 +24,13 @@ jsonpickle==3.0.2
 lxml==5.2.0
 MarkupSafe==2.1.3
 multidict==6.0.5
+priority==2.0.0
+Quart==0.19.4
 requests==2.31.0
-soupsieve==2.4.1
+soupsieve==2.5
 stripe==8.7.0
-typing_extensions==4.7.0
-urllib3==2.0.7
-Werkzeug==2.2.3
+typing_extensions==4.10.0
+urllib3==2.1.0
+Werkzeug==3.0.1
+wsproto==1.2.0
 yarl==1.9.4
